B&L QA/objects/Account_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Number_of_Operating_Rooms__c</fullName>
        <description>USSUR</description>
        <label>Number of Operating Rooms</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Share_Multifocal_Bifocal_Contact__c</fullName>
        <description>What percent of this office&apos;s contact lens patients wear Multifocal or Bifocal Contact Lenses?</description>
        <inlineHelpText>What percent of this office&apos;s contact lens patients wear Multifocal or Bifocal Contact Lenses?</inlineHelpText>
        <label>Office Share Multifocal/Bifocal Contact</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Office_Share_SVS_Lenses__c</fullName>
        <description>What percent of this office&apos;s contact lens patients wear Single Vision Spherical Lenses?</description>
        <inlineHelpText>What percent of this office&apos;s contact lens patients wear Single Vision Spherical Lenses?</inlineHelpText>
        <label>Office&apos;s Share SVS Lenses</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Office_Share_Toric_Lenses__c</fullName>
        <description>What percent of this office&apos;s contact lens patients wear Toric Lenses?</description>
        <inlineHelpText>What percent of this office&apos;s contact lens patients wear Toric Lenses?</inlineHelpText>
        <label>Office&apos;s Share Toric Lenses</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Femto__c</fullName>
        <label>Other Femto</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Profile__c</fullName>
        <description>Single or repeat use packs.
Used by EMEA SU.and USSUR</description>
        <label>Pack Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Use</fullName>
                </value>
                <value>
                    <fullName>Repeat Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patch__c</fullName>
        <label>Patch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patients_Disposable_Lenses__c</fullName>
        <defaultValue>0.07</defaultValue>
        <description>Industry average for percentage of patients wearing daily disposable lenses</description>
        <inlineHelpText>Industry average for percentage of patients wearing daily disposable lenses</inlineHelpText>
        <label>Patients Disposable Lenses</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Patients_MultiFocal_OR_BiFocal_Lenses__c</fullName>
        <defaultValue>0.08</defaultValue>
        <description>Industry average for percentage of patients weating MultiFocal OR BIFocal lenses</description>
        <inlineHelpText>Industry average for percentage of patients weating MultiFocal OR BIFocal lenses</inlineHelpText>
        <label>Patients MultiFocal OR BiFocal Lenses</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Patients_SVS_Lenses__c</fullName>
        <defaultValue>0.68</defaultValue>
        <description>Industry average for percentage of patients wearing Single Vision Spherical Lenses</description>
        <inlineHelpText>Industry average for percentage of patients wearing Single Vision Spherical Lenses</inlineHelpText>
        <label>Patients SVS Lenses</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Patients_Toric_Lenses__c</fullName>
        <defaultValue>0.24</defaultValue>
        <description>Industry average for percentage of patients weating Toric lenses</description>
        <inlineHelpText>Industry average for percentage of patients weating Toric lenses</inlineHelpText>
        <label>Patients Toric Lenses</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phaco_Packs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by EMEA SU.</description>
        <label>Phaco Packs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_IOL_1_Volume__c</fullName>
        <description>EMEA SU field</description>
        <label>Premium IOL 1 Volume</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_IOL_1__c</fullName>
        <description>EMEA SU field</description>
        <label>Premium IOL 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crystalens HD</fullName>
                </value>
                <value>
                    <fullName>Crystalens AO</fullName>
                </value>
                <value>
                    <fullName>ReStor</fullName>
                </value>
                <value>
                    <fullName>Rezoom</fullName>
                </value>
                <value>
                    <fullName>Tecnis MF</fullName>
                </value>
                <value>
                    <fullName>Acri.Tec</fullName>
                </value>
                <value>
                    <fullName>Human Optics</fullName>
                </value>
                <value>
                    <fullName>Eyeonics</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Oculentis</fullName>
                </value>
                <value>
                    <fullName>Domilens</fullName>
                </value>
                <value>
                    <fullName>1st Q</fullName>
                </value>
                <value>
                    <fullName>PhysIOL</fullName>
                </value>
                <value>
                    <fullName>Polytech</fullName>
                </value>
                <value>
                    <fullName>Dr. Schmidt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premium_IOL_2_Volume__c</fullName>
        <description>EMEA SU field</description>
        <label>Premium IOL 2 Volume</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_IOL_2__c</fullName>
        <description>EMEA SU field</description>
        <label>Premium IOL 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crystalens HD</fullName>
                </value>
                <value>
                    <fullName>Crystalens AO</fullName>
                </value>
                <value>
                    <fullName>ReStor</fullName>
                </value>
                <value>
                    <fullName>Rezoom</fullName>
                </value>
                <value>
                    <fullName>Tecnis MF</fullName>
                </value>
                <value>
                    <fullName>Acri.Tec</fullName>
                </value>
                <value>
                    <fullName>Human Optics</fullName>
                </value>
                <value>
                    <fullName>Eyeonics</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Oculentis</fullName>
                </value>
                <value>
                    <fullName>Domilens</fullName>
                </value>
                <value>
                    <fullName>1st Q</fullName>
                </value>
                <value>
                    <fullName>PhysIOL</fullName>
                </value>
                <value>
                    <fullName>Polytech</fullName>
                </value>
                <value>
                    <fullName>Dr. Schmidt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premium_IOL_3_Volume__c</fullName>
        <description>EMEA SU field</description>
        <label>Premium IOL 3 Volume</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_IOL_3__c</fullName>
        <description>EMEA SU field</description>
        <label>Premium IOL 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crystalens HD</fullName>
                </value>
                <value>
                    <fullName>Crystalens AO</fullName>
                </value>
                <value>
                    <fullName>ReStor</fullName>
                </value>
                <value>
                    <fullName>Rezoom</fullName>
                </value>
                <value>
                    <fullName>Tecnis MF</fullName>
                </value>
                <value>
                    <fullName>Acri.Tec</fullName>
                </value>
                <value>
                    <fullName>Human Optics</fullName>
                </value>
                <value>
                    <fullName>Eyeonics</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Oculentis</fullName>
                </value>
                <value>
                    <fullName>Domilens</fullName>
                </value>
                <value>
                    <fullName>1st Q</fullName>
                </value>
                <value>
                    <fullName>PhysIOL</fullName>
                </value>
                <value>
                    <fullName>Polytech</fullName>
                </value>
                <value>
                    <fullName>Dr. Schmidt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premium_IOL_Conversion__c</fullName>
        <description>USSUR</description>
        <label>Premium IOL Conversion %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Premium_IOL_Percent__c</fullName>
        <description>Usage percent of premium IOL at this site.
Used by EMEA SU.and USSUR</description>
        <label>Premium IOL %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Premium_IOL_Volume__c</fullName>
        <description>Stores the average number of premium IOL procedures undertaken at this site.
Used by EMEA SU. and USSUR</description>
        <inlineHelpText>Annual</inlineHelpText>
        <label>Premium IOL Volume</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_IOL__c</fullName>
        <description>Premium IOL in use at this site.
Used by EMEA SU.and USSUR</description>
        <label>Premium IOL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ReStor</fullName>
                </value>
                <value>
                    <fullName>Rezoom</fullName>
                </value>
                <value>
                    <fullName>Tecnis MF</fullName>
                </value>
                <value>
                    <fullName>Acri.Tec</fullName>
                </value>
                <value>
                    <fullName>Human Optics</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Crystalens HD</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>PhysIOL</fullName>
                </value>
                <value>
                    <fullName>Crystalens AO</fullName>
                </value>
                <value>
                    <fullName>Crystalens 5.0</fullName>
                </value>
                <value>
                    <fullName>Oculentis</fullName>
                </value>
                <value>
                    <fullName>Domilens</fullName>
                </value>
                <value>
                    <fullName>1st Q</fullName>
                </value>
                <value>
                    <fullName>Polytech</fullName>
                </value>
                <value>
                    <fullName>Dr. Schmidt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premium_IOL_if_Other__c</fullName>
        <description>USSUR</description>
        <label>Premium IOL if &quot;Other&quot;</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by EMEA SU and USSUR</description>
        <label>Primary Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_IOL_Percent__c</fullName>
        <description>Percental use of primary IOL.
Used by EMEA SU.and USSUR</description>
        <label>Primary IOL %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_IOL__c</fullName>
        <description>Tracks the primary IOL in use at the site.
Used by EMEA SU. and USSUR</description>
        <label>Primary IOL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Akreos</fullName>
                </value>
                <value>
                    <fullName>SofPort</fullName>
                </value>
                <value>
                    <fullName>Acrysof</fullName>
                </value>
                <value>
                    <fullName>Tecnis</fullName>
                </value>
                <value>
                    <fullName>Sensar</fullName>
                </value>
                <value>
                    <fullName>Zeiss-IOLtech</fullName>
                </value>
                <value>
                    <fullName>Corneal</fullName>
                </value>
                <value>
                    <fullName>Rayner</fullName>
                </value>
                <value>
                    <fullName>Hoya</fullName>
                </value>
                <value>
                    <fullName>AcriTec</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>PhysIOL</fullName>
                </value>
                <value>
                    <fullName>Akreos AO</fullName>
                </value>
                <value>
                    <fullName>MI60</fullName>
                </value>
                <value>
                    <fullName>Tecnis CL</fullName>
                </value>
                <value>
                    <fullName>Tecnis W/OptiEdge</fullName>
                </value>
                <value>
                    <fullName>Acrysof Natural</fullName>
                </value>
                <value>
                    <fullName>Acrysof IQ</fullName>
                </value>
                <value>
                    <fullName>I Symm</fullName>
                </value>
                <value>
                    <fullName>Elastimide</fullName>
                </value>
                <value>
                    <fullName>Afinity</fullName>
                </value>
                <value>
                    <fullName>Nano-Flex</fullName>
                </value>
                <value>
                    <fullName>Akreos MICS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_IOL_if_Other__c</fullName>
        <description>USSUR</description>
        <label>Primary IOL if &quot;Other&quot;</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Customer_Subtype__c</fullName>
        <description>If the customer type is Private, then allows TM to define which kind of private group this customer is.
Used by EMEA SU.</description>
        <label>Private Customer Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Customer_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Private clinic with a healthcare group</fullName>
                </value>
                <value>
                    <fullName>Independent practice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Manufacturer__c</fullName>
        <description>Product Manufacturer?</description>
        <inlineHelpText>Product Manufacturer?</inlineHelpText>
        <label>Product Manufacturer?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alcon</fullName>
                </value>
                <value>
                    <fullName>AMO</fullName>
                </value>
                <value>
                    <fullName>Ciba</fullName>
                </value>
                <value>
                    <fullName>Cooper</fullName>
                </value>
                <value>
                    <fullName>J&amp;J</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profile_Description__c</fullName>
        <description>Account Profile Type Description</description>
        <formula>CASE( $RecordType.Name , &apos;USASL&apos;, &apos;USASL Account Profile&apos;, &apos;USECS&apos;, &apos;USECS Account Profile&apos;, &apos;&apos;)</formula>
        <inlineHelpText>Account Profile Type Description</inlineHelpText>
        <label>Profile Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Percent_Complete__c</fullName>
        <description>EMEA SU: displays the percentage completed of this account profile.</description>
        <formula>BLANKVALUE(TEXT(ROUND(((
IF ( Cataract_Procedure_Volume__c&gt;0 , 1 , 0) + IF ( Premium_IOL_Volume__c&gt;0 , 1 , 0) + IF ( VR_Procedure_Volume__c&gt;0 , 1 , 0) + IF ( Average_Cataract_Procedure_Price__c&gt;0 , 1 , 0) + IF ( Average_Premium_IOL_Price__c&gt;0 , 1 , 0) + IF ( Average_VR_Procedure_Price__c&gt;0 , 1 , 0) + IF ( Number_of_Machines__c&gt;0 , 1 , 0) + IF(LEN(TEXT(Pack_Profile__c))=0 , 0 , 1) + IF(LEN(TEXT(Last_Demo_Started__c))=0 , 0 , 1) + IF(LEN(TEXT(Last_Demo_Ended__c))=0 , 0 , 1) + IF(LEN(TEXT(Monofocal_IOL_1__c))=0 , 0 , 1) + IF ( Monofocal_IOL_1_Volume__c&gt;0 , 1 , 0) + IF(LEN(TEXT(Monofocal_IOL_2__c))=0 , 0 , 1) + IF ( Monofocal_IOL_2_Volume__c&gt;0 , 1 , 0) + IF(LEN(TEXT(Monofocal_IOL_3__c))=0 , 0 , 1) + IF ( Monofocal_IOL_3_Volume__c&gt;0 , 1 , 0) + IF(LEN(TEXT(Premium_IOL_1__c))=0 , 0 , 1) + IF ( Premium_IOL_1_Volume__c&gt;0 , 1 , 0) + IF(LEN(TEXT(Premium_IOL_2__c))=0 , 0 , 1) + IF ( Premium_IOL_2_Volume__c&gt;0 , 1 , 0)
) / 20) * 100,0)), &apos;0&apos;) &amp; &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Percent Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refractive_Practice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates if the account is a refractive practice</description>
        <label>Refractive Practice?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>IndiaSU field to collect geographic region of the account located</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>NorthEast</fullName>
                </value>
                <value>
                    <fullName>North &amp; NorthWest</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Guangdong</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Bangkok</fullName>
                </value>
                <value>
                    <fullName>Samut Prakan</fullName>
                </value>
                <value>
                    <fullName>Chaiyaphum</fullName>
                </value>
                <value>
                    <fullName>Nakhon Ratchasima</fullName>
                </value>
                <value>
                    <fullName>Udon Thani</fullName>
                </value>
                <value>
                    <fullName>Khon Kaen</fullName>
                </value>
                <value>
                    <fullName>Ubon Ratchathani</fullName>
                </value>
                <value>
                    <fullName>Surin</fullName>
                </value>
                <value>
                    <fullName>Phetchaburi</fullName>
                </value>
                <value>
                    <fullName>Songkhla</fullName>
                </value>
                <value>
                    <fullName>Prachuap Khiri Khan</fullName>
                </value>
                <value>
                    <fullName>Surat Thani</fullName>
                </value>
                <value>
                    <fullName>Chumphon</fullName>
                </value>
                <value>
                    <fullName>Phitsanulok</fullName>
                </value>
                <value>
                    <fullName>Chiang Mai</fullName>
                </value>
                <value>
                    <fullName>Nakhon Sawan</fullName>
                </value>
                <value>
                    <fullName>Lampang</fullName>
                </value>
                <value>
                    <fullName>Pattani</fullName>
                </value>
                <value>
                    <fullName>Phatthalung</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_IOL_Percent__c</fullName>
        <description>Usage percent of secondary IOL.
Used by EMEA SU. and USSUR</description>
        <label>Secondary IOL %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Secondary_IOL__c</fullName>
        <description>Tracks the secondary IOL in use at the site.
Used by EMEA SU. and USSUR</description>
        <label>Secondary IOL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Akreos</fullName>
                </value>
                <value>
                    <fullName>SofPort</fullName>
                </value>
                <value>
                    <fullName>Acrysof</fullName>
                </value>
                <value>
                    <fullName>Tecnis</fullName>
                </value>
                <value>
                    <fullName>Sensar</fullName>
                </value>
                <value>
                    <fullName>Zeiss-IOLtech</fullName>
                </value>
                <value>
                    <fullName>Corneal</fullName>
                </value>
                <value>
                    <fullName>Rayner</fullName>
                </value>
                <value>
                    <fullName>Hoya</fullName>
                </value>
                <value>
                    <fullName>AcriTec</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>PhysIOL</fullName>
                </value>
                <value>
                    <fullName>Akreos AO</fullName>
                </value>
                <value>
                    <fullName>Akreos MICS</fullName>
                </value>
                <value>
                    <fullName>MI60</fullName>
                </value>
                <value>
                    <fullName>Tecnis CL</fullName>
                </value>
                <value>
                    <fullName>Tecnis W/OptiEdge</fullName>
                </value>
                <value>
                    <fullName>Acrysof Natural</fullName>
                </value>
                <value>
                    <fullName>Acrysof IQ</fullName>
                </value>
                <value>
                    <fullName>I Symm</fullName>
                </value>
                <value>
                    <fullName>Elastimide</fullName>
                </value>
                <value>
                    <fullName>Afinity</fullName>
                </value>
                <value>
                    <fullName>Nano-Flex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_IOL_if_Other__c</fullName>
        <description>USSUR</description>
        <label>Secondary IOL if &quot;Other&quot;</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segmentation_TH__c</fullName>
        <label>Segmentation(TH)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GOV. HOSPITAL</fullName>
                </value>
                <value>
                    <fullName>PRIVATE HOSPITAL</fullName>
                </value>
                <value>
                    <fullName>EDUCATIONAL INST.</fullName>
                </value>
                <value>
                    <fullName>MILITARY HOSP. BID</fullName>
                </value>
                <value>
                    <fullName>POLYCLINICS</fullName>
                </value>
                <value>
                    <fullName>H&apos;CARE PROFESSIO.</fullName>
                </value>
                <value>
                    <fullName>H&apos;CARE PARA. - PROF.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segmentation__c</fullName>
        <description>IndiaSU field to collect classification of account</description>
        <label>Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic Medical Centers</fullName>
                </value>
                <value>
                    <fullName>Movers &amp; Shakers</fullName>
                </value>
                <value>
                    <fullName>Stars</fullName>
                </value>
                <value>
                    <fullName>Rising Starts</fullName>
                </value>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
                <value>
                    <fullName>Tier 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Soft_Contact_Lens_Patients_Per_Week__c</fullName>
        <description>How many Soft Contact lens patients are seen in this office per week?</description>
        <inlineHelpText>How many Soft Contact lens patients are seen in this office per week?</inlineHelpText>
        <label>Soft Contact Lens Patients Per Week</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Soft_Contact_Lens_Patients_Per_Wk_ECS__c</fullName>
        <description>ECS</description>
        <label>Soft Contact Lens Patients Per Wk (ECS)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Toric_IOL_Pct__c</fullName>
        <description>Toric IOL %</description>
        <label>Toric IOL %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Toric_IOL_Volume__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Toric IOL Volume</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Toric_IOL__c</fullName>
        <description>Toric IOL</description>
        <label>Toric IOL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alcon</fullName>
                </value>
                <value>
                    <fullName>AMO</fullName>
                </value>
                <value>
                    <fullName>B+L</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Toric_Volume__c</fullName>
        <description>USSUR Toric Volume</description>
        <label>Toric Volume</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Wholesale_Soft_Contact_Len__c</fullName>
        <description>What is Total Monthly Wholesale Soft Contact lens business in this location?</description>
        <inlineHelpText>What is Total Monthly Wholesale Soft Contact lens business in this location?</inlineHelpText>
        <label>Tot. Monthly Wholesale Soft Contact Lens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VR_Packs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by EMEA SU.</description>
        <label>VR Packs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VR_Procedure_Volume__c</fullName>
        <description>Stores the average cost of vitreo-retinal procedures undertaken at this site.
Used by EMEA SU.and USSUR</description>
        <inlineHelpText>Annual</inlineHelpText>
        <label>VR Procedure Volume</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visco_elastics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by EMEA SU</description>
        <label>Visco-elastics?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Viscoelastics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by EMEA SU.</description>
        <label>Visco-elastics?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>per_of_patients_new_to_cl__c</fullName>
        <description>ECS</description>
        <inlineHelpText>What percentage of this office&apos;s contact lens patients are NEW to contact lenses?</inlineHelpText>
        <label>% of Patients New to Contact Lenses</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Account Profile</label>
    <nameField>
        <displayFormat>AP{0000000000}</displayFormat>
        <label>Account Profile Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Profiles</pluralLabel>
    <recordTypes>
        <fullName>APACSU_ANZ_Profile</fullName>
        <active>true</active>
        <description>APACSU ANZ Account Profile Record Type</description>
        <label>APACSU ANZ Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>APACSU_Direct</fullName>
        <active>true</active>
        <description>APACSU account profile record type for the accounts migrated from BPCS ERP</description>
        <label>APACSU Direct</label>
    </recordTypes>
    <recordTypes>
        <fullName>APACSU_Indirect</fullName>
        <active>true</active>
        <description>APACSU account profile record type for the indirect accounts created directly in SF</description>
        <label>APACSU Indirect</label>
    </recordTypes>
</CustomObject>